<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WiFi Localizer</string>
    <string name="action_search">Search for a specific location</string>
    <string name="action_add">Add a new location</string>
    <string name="action_help">About</string>
    <string name="action_localize">Start localization</string>
    <string name="action_new_session">Train</string>
    <string name="action_add_map_scale">Add a map scale</string>
    <string name="action_lazy_train">Automatically train</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_export_data">Share CSV Data</string>
    <string name="btn_localize">Localize</string>
    <string name="btn_start_automatic_train">Start Automatic Gathering</string>
    <string name="btn_end_automatic_train">End Automatic Gathering</string>
    <string name="title_activity_add_map">AddMapActivity</string>
    <string name="title_activity_map_scale">MapScaleActivity</string>
    <string name="title_activity_view_map">ViewMapActivity</string>
    <string name="title_activity_train">TrainActivity</string>
    <string name="title_activity_localize">LocalizeActivity</string>
    <string name="title_activity_automatic_train">AutomaticTrain</string>
    <string name="select_image">Choose an image&#8230;</string>
    <string name="toast_name_warning">Map name must be set.</string>
    <string name="toast_map_warning">Map must be set.</string>
    <string name="toast_map_id_warning">Could not find that map in the database.</string>
    <string name="img_map_preview_description">Current map image</string>
    <string name="hint_map_name">Map Name</string>
    <string name="cd_map_image">Selected Map Image</string>
    <string name="img_train_activity_description">Click on current position on image</string>
    <string name="description_automatic_train">This mode automatically gathers access point data at a given interval.</string>
    <string name="action_dbm">DataBase Manager</string>
    <string name="action_select">Select a map</string>
    <string name="title_activity_select_map">SelectMap</string>
    <string name="action_lock">Lock</string>
    <string name="delete">Delete</string>
    <string name="action_add_map">Add a new map</string>
    <string name="action_selectMap">select map</string>
    <string name="action_deleteMap">delete map</string>
    <string name="action_selectSession">select session</string>
    <string name="action_deleteSession">delete session</string>
    <string name="action_selectMap_cmenu">select map</string>
    <string name="action_deleteMap_cmenu">delete map</string>
    <string name="action_options">Options</string>
    <string name="switch_localize">Auto-Localize</string>
    <string name="action_info">Info</string>
    <string name="title_activity_settings">Settings</string>

    <string name="dialog_scanning_title">Scanning Wi-Fi Access Points&#8230;</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_scanning_description">Please do not move device&#8230;</string>
    <string name="dialog_scanning_continuous_message">Have %d readings&#8230;</string>

    <string name="info_string">
        * Begin by selecting a map from the list given.
        \n* Open a map and start a training session by clicking Train when viewing a chosen map.
        \n* To train, find your location on the map and click it. Once you have the exact location,
        press the "Lock" button.
        \n* Repeat this step to train multiple locations.
        \n* Once you are done with training several locations, make sure you click the "Save" button
        at the top.
    </string>
    <string name="toast_not_enough_data">not enough data&#8230; add more training locations</string>
    <string name="action_sync">Sync Remote DB</string>
    <string name="action_getMetaData">Get Meta-Data</string>

    <string name="dont_show_hints">Do not show more hints</string>
    <string name="hint_view_act">Click "Train" at the top to start your train session.</string>
    <string name="hint_localize">
        Find your current location by clicking Localize.
        Automatically find your location by turning on Auto-Localize.
        With this, you can move to different locations and the red dot will follow your
        movement.
    </string>
    <string name="hint_train">
        Find where you are on the map and click on your location.
        You can change where you placed your X by clicking elsewhere.
        When you are sure of where your X is placed (your exact location), click the "Lock" button.
        You can train multiple spots, one after another after locking.
        Make sure to "Save" above at the end.
    </string>
    <string name="first_welcome_message">Hello! To begin, select a map from the list to train.</string>
    <string name="sync_in_progress">Syncing SQLite Data with Remote MySQL DB. Please wait&#8230;</string>
    <string name="retrieve_in_progress">Retrieving metadata from Remote DB. Please wait&#8230;</string>
    <string name="title_activity_pineapple_debug">PineappleDebug</string>
    <string name="pref_data_continuous">Collect data continuously</string>
    <string name="pref_data_passes_info">Collect data for specific number of passes</string>
    <string name="pref_data_passes_num">Choose number of passes</string>
    <string name="pref_data_samples_info">Collect specific number of samples</string>
    <string name="pref_data_samples_num">Choose number of samples</string>
    <string name="train_point_data_info">Tap on a training point and its data will appear here</string>
    <string name="pref_data_header">Training Options</string>
    <string name="pref_pineapple_description">The WiFi Pineapple is a piece of third-party wireless network hardware that can be used to gather 802.11 Probe Requests. For more information, visit https://www.wifipineapple.com/.</string>
    <string name="pref_pineapple_enabled">Enable WiFi Pineapple functionality</string>
    <string name="btn_localize_local">Local</string>
    <string name="description_localize_map">Map to localize against</string>
    <string name="btn_localize_local2">Local2</string>
    <string name="btn_localize_file">File</string>
    <string name="btn_localize_file2">File2</string>
    <string name="btn_auto_localize">Auto-Localize</string>
    <string name="hint_train_title">Instructions for training</string>
    <string name="hint_localize_title">Instructions for localization</string>
    <string name="menu_localize_help">Help</string>
    <string name="dialog_localize_help_title">Localization Modes</string>
    <string name="dialog_localize_help_message">
        * Local\n
        Use local database and choose best 3 points with global minimal euclidean distance.\n
        * Local2\n
        Alternative implementation of Local algorithm better suited for large sample sets.\n
        * File\n
        (DEBUG) Use data held in R.raw.readings instead of local database.\n
        * File2\n
        (DEBUG) Use alternative implementation on data held in R.raw.readings instead of local database.\n
        \nFor more information, consult the Javadoc in LocalizationEuclideanDistance.java
    </string>

</resources>
