<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:wifilocalizer="http://schemas.android.com/apk/res-auto"
      tools:context="edu.fiu.mpact.wifilocalizer.MainActivity">

    <!-- great resource: http://androiddrawables.com/Menu.html -->

    <item
        android:id="@+id/action_info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/action_info"
        wifilocalizer:showAsAction="always" />
    <item
        android:id="@+id/action_add_map"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_add_map"
        wifilocalizer:showAsAction="always" />
    <item
        android:id="@+id/action_sync_database"
        android:title="@string/action_sync"
        wifilocalizer:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_get_metadata"
        android:title="@string/action_getMetaData"
        wifilocalizer:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_options"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_options"
        wifilocalizer:showAsAction="never" />

</menu>
