<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:wifilocalizer="http://schemas.android.com/apk/res-auto"
      tools:context="edu.fiu.mpact.wifilocalizer.ViewMapActivity">

    <item
        android:id="@+id/action_localize"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/action_localize"
        wifilocalizer:showAsAction="always" />
    <item
        android:id="@+id/action_train"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_new_session"
        wifilocalizer:showAsAction="always" />
    <item
        android:id="@+id/action_export_data"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/action_export_data"
        wifilocalizer:showAsAction="ifRoom" />

</menu>
